--- a/02 Internet Cart/style.css
+++ b/02 Internet Cart/style.css
@@ -5,7 +5,8 @@ div {
 }
 
 button {
-  width: 50px;
+  margin: 0 10px;
+  min-width: 50px;
   height: 50px;
   background-color: #fff;
   border: 2px solid black;
