Add header.js style css and one picture to header

--- a/x08-single-page-application/src/styles/App.css
+++ b/x08-single-page-application/src/styles/App.css
@@ -9,8 +9,8 @@ div.app {
 }
 div.app header {
   flex-basis: 30vh;
-  background-color: #444;
-  color: white;
+  position: relative;
+  overflow: hidden;
 }
 div.app main {
   display: flex;
